--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Bike Crash Prototype</title>
-    <style>
-        body { font-family: Arial; text-align: center; margin-top: 50px; background: #f4f4f4; }
-        #speed { font-size: 24px; margin-bottom: 20px; }
-        button { padding: 10px 20px; margin: 5px; font-size: 16px; cursor: pointer; }
-        #crash-btn { background-color: #e74c3c; color: white; }
-        #accelerate-btn { background-color: #2ecc71; color: white; }
-        #reset-btn { background-color: #3498db; color: white; }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Bike Prototype</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Bike Crash Prototype</h1>
-    <div id="speed">Speed: 0 km/h</div>
+  <div class="container">
+    <img src="bike_front.png" alt="Bike Front" class="bike-image" />
+
+    <div id="speed" class="speed-display">Speed: 0 km/h</div>
+    <div id="location" class="location-display">📍 Getting location...</div>
+
     <button id="accelerate-btn">Accelerate</button>
+    <button id="brake-btn">Brake</button>
     <button id="crash-btn">Crash</button>
     <button id="reset-btn">Reset</button>
+  </div>
 
-    <!-- Include JS -->
-    <script src="index.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
